    - debian/patches/any/local-libgcc-compat-ports.diff: rebased.
    - debian/patches/any/submitted-longdouble.diff: rebased.
    - debian/patches/any/submitted-string2-strcmp.diff: rebased.
    - debian/patches/any/local-dynamic-resolvconf.diff: rebased.
    - debian/patches/any/cvs-tst-malloc-thread-exit.diff: upstreamed.
    - debian/patches/any/cvs-sys-personality-h.diff: upstreamed.

 -- Aurelien Jarno <aurel32@debian.org>  Tue, 05 Jul 2016 20:43:29 +0200

glibc (2.23-1) unstable; urgency=medium

  [ Aurelien Jarno ]
  * debian/patches/git-updates.diff: update from upstream stable branch:
    - debian/patches/hppa/submitted-start.diff: drop, upstreamed.
  * debian/patches/localedata/locale-C.diff: update comment about the week
    entry.  Closes: #829093.
  * debian/testsuite-xfail-debian.mk: allow malloc/tst-mallocfork2 to fail
    on hurd-i386, this is not a regression but a new test.
  * debian/patches/sparc/cvs-sparc-nearbyint.diff: new patch from upstream
    to fix nearbyint* functions with a sNaN input on SPARC.
  * debian/testsuite-xfail-debian.mk: allow math/test-double-finite and
    math/test-float-finite to fail on alpha, as this architecture do not
    fully support IEEE flags.
  * debian/patches/alpha/submitted-trunc.diff: new patch to fix trunc and
    truncf results for big values on alpha.
  * debian/testsuite-xfail-debian.mk: allow nptl/tst-cancel9 and
    nptl/tst-cancelx9 to fail on hppa, they are not regressions.

  [ John David Anglin ]
  * debian/patches/hppa/submitted-libm-test-ulps.diff: new patch to update
    the math test ULPs on hppa.

  [ Samuel Thibault ]
  * patches/hurd-i386/tg-poll_errors_fixes.diff: Update from tg branch, fixes
    gettimeofday call from select.

 -- Aurelien Jarno <aurel32@debian.org>  Sun, 03 Jul 2016 21:59:34 +0200

glibc (2.23-0experimental4) experimental; urgency=medium

  [ Aurelien Jarno ]
  * debian/patches/git-updates.diff: update from upstream stable branch.