@@ -23,10 +23,10 @@
 +revision   "1.5"
 +date       "2012-11-18"
 +%
-+category  "C:2012";LC_IDENTIFICATION
-+category  "C:2012";LC_CTYPE
-+category  "C:2012";LC_COLLATE
-+category  "C:2012";LC_TIME
++category  "i18n:2012";LC_IDENTIFICATION
++category  "i18n:2012";LC_CTYPE
++category  "i18n:2012";LC_COLLATE
++category  "i18n:2012";LC_TIME
 +END LC_IDENTIFICATION
 +
 +LC_CTYPE
