@@ -46,18 +46,18 @@ Submitted upstream: BZ2522
 +revision   "1.0"
 +date       "2006-04-06"
 +%
-+category  "ca_ES@valencia:2006";LC_IDENTIFICATION
-+category  "ca_ES@valencia:2006";LC_CTYPE
-+category  "ca_ES@valencia:2006";LC_COLLATE
-+category  "ca_ES@valencia:2006";LC_MONETARY
-+category  "ca_ES@valencia:2006";LC_NUMERIC
-+category  "ca_ES@valencia:2006";LC_TIME
-+category  "ca_ES@valencia:2006";LC_MESSAGES
-+category  "ca_ES@valencia:2006";LC_PAPER
-+category  "ca_ES@valencia:2006";LC_NAME
-+category  "ca_ES@valencia:2006";LC_ADDRESS
-+category  "ca_ES@valencia:2006";LC_TELEPHONE
-+category  "ca_ES@valencia:2006";LC_MEASUREMENT
++category  "i18n:2012";LC_IDENTIFICATION
++category  "i18n:2012";LC_CTYPE
++category  "i18n:2012";LC_COLLATE
++category  "i18n:2012";LC_MONETARY
++category  "i18n:2012";LC_NUMERIC
++category  "i18n:2012";LC_TIME
++category  "i18n:2012";LC_MESSAGES
++category  "i18n:2012";LC_PAPER
++category  "i18n:2012";LC_NAME
++category  "i18n:2012";LC_ADDRESS
++category  "i18n:2012";LC_TELEPHONE
++category  "i18n:2012";LC_MEASUREMENT
 +
 +END LC_IDENTIFICATION
 +
