@@ -42,6 +42,9 @@ glibc (2.23.90+20160507.87523e9-1) UNRELEASED; urgency=medium
     - debian/patches/any/local-dynamic-resolvconf.diff: rebased.
     - debian/patches/any/cvs-tst-malloc-thread-exit.diff: upstreamed.
     - debian/patches/any/cvs-sys-personality-h.diff: upstreamed.
+  * debian/patches/localedata/{locale-C.diff,locale-de_LI.diff,
+    locale-eu_FR.diff,new-valencian-locale.diff}: change LC_IDENTIFICATION
+    to i18n:2012.
 
  -- Aurelien Jarno <aurel32@debian.org>  Tue, 05 Jul 2016 20:43:29 +0200
 
